# danjeros

./: .gitignore  CMakeLists.txt  config.h.in
include/: assert.h  types.h
include/arch/: cpu.h  interrupt.h  pagetable.h
include/arch/x86/: ioport.h  mp_configuration.h  pic.h
include/arch/x86/boot/: multiboot.h
include/arch/x86_64/: cpu.h  interrupt.h  interrupt_descriptor_table.h  pagetable.h
include/kernel/: condition.h  kernel_panic.h  mutex.h  scheduler.h  spinlock.h  thread.h  thread_queue.h
src/: CMakeLists.txt
src/arch/x86/: kernel_panic.c  mp_configuration.c  pic.c
src/arch/x86_64/: interrupt.c  isr.s  thread.c  thread_stubs.s
src/arch/x86_64/boot/: multiboot.s  start.s
src/kernel/: main.c  scheduler.c
toolchain/: linker.ld  toolchain_x86_64.cmake
